--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-react-helmet": "^3.5.0",
     "gatsby-plugin-sharp": "^2.9.0",
     "gatsby-plugin-styled-components": "^3.8.0",
+    "gatsby-plugin-tawk.to": "^1.0.8",
     "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-filesystem": "^2.6.1",
     "gatsby-transformer-sharp": "^2.7.0",
