--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "gatsby-plugin-react-helmet": "^3.5.0",
     "gatsby-plugin-sharp": "^2.9.0",
     "gatsby-plugin-styled-components": "^3.8.0",
-    "gatsby-plugin-tawk.to": "^1.0.8",
     "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-filesystem": "^2.6.1",
     "gatsby-transformer-sharp": "^2.7.0",
@@ -43,7 +42,8 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.14.2",
     "react-scroll": "^1.8.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "tawkto-react": "^3.0.1"
   },
   "devDependencies": {
     "prettier": "2.1.2"
